# adventOfCode

./: .gitignore
.metals/: metals.lock.db  metals.mv.db
2015/day1/: solve.py
2015/day2/: solve.py
2015/day3/: solve.py
2015/day4/: solve.py
2015/day5/: solve.py
2015/day6/: solve.py
2015/day7/: solve.mjs
2015/tools/: AOCTools.mjs
2019/day1/: solve.py
2019/day2/: solve.py
2019/day3/: solve.py
2020/day1/: solve.mjs  solve.py
2020/day10/: solve.py
2020/day11/: solve.py
2020/day12/: solve.py
2020/day13/: input  solve.py
2020/day14/: input  solve.py
2020/day15/: solve.py
2020/day16/: solve.py
2020/day17/: solve.py
2020/day18/: input  solve.py
2020/day19/: input2  solve.py  testInput
2020/day2/: solve.mjs  solve.py
2020/day20/: input  solve.py
2020/day3/: solve.py
2020/day4/: solve.py
2020/day5/: input  solve.py
2020/day6/: solve.py
2020/day7/: solve.py
2020/day8/: input  solve.py
2020/day9/: input  solve.py
2021/1/: solve.mjs
2021/10/: solve.mjs
2021/11/: solve.mjs
2021/12/: solve.mjs
2021/13/: grid.txt  solve.mjs
2021/14/: solve.mjs
2021/15/: solve.mjs
2021/16/: solve.mjs
2021/17/: solve.mjs
2021/18/: solve.mjs
2021/19/: solve.mjs
2021/2/: solve.mjs
sessions/20221122/aoc/: aoc.cabal  hie.yaml
sessions/20221122/aoc/app/: utils.hs  y2015d1p1.hs  y2015d2p1.hs
sessions/20221122/aoc/app/y2015/d1/: p2.hs
sessions/20221122/aoc/app/y2015/d2/: p2.hs
sessions/20221122/aoc/src/: Main.hs
sessions/20221122/aoc/src/Aoc/: Utils.hs
sessions/20221122/aoc/src/Aoc/Y2015/: D1.hs  D2.hs  D3.hs  D4.hs
(+41 files in other folders)
