cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             mrrogge
maintainer:         5900418+mrrogge@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable main
    main-is: Main.hs
    build-depends: base ^>=4.16.3.0, containers ^>=0.6.6, cryptonite ^>=0.30, bytestring ^>=0.11.3.1
    hs-source-dirs: src
    default-language: Haskell2010
    other-modules: Aoc.Y2015.D1, Aoc.Y2015.D2, Aoc.Y2015.D3, Aoc.Y2015.D4, Aoc.Utils